<resources>
    <string name="app_name">webSite</string>
    <string name="textLabel">Create account</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="registration">Registration</string>
    <string name="authorization">Authorization</string>
    <string name="enter">Enter</string>
    <string name="list_of_goods">Weapons</string>
    <string name="full_information">Full information</string>
</resources>