<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackGround"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontdiner_swanky"
        android:textColor="@color/textColorLabel"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_margin="40dp"
        android:textSize="26sp"
        android:text="@string/textLabel" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="@color/textColorHint"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/fontdiner_swanky"
        android:textColor="@color/textColorLabel"
        android:textStyle="bold"
        android:backgroundTint="@color/textColorLabel"
        android:hint="@string/enter_your_login" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/textColorLabel"
        android:ems="10"
        android:fontFamily="@font/fontdiner_swanky"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColorLabel"
        android:textColorHint="@color/textColorHint"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/textColorLabel"
        android:ems="10"
        android:fontFamily="@font/fontdiner_swanky"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColor="@color/textColorLabel"
        android:textColorHint="@color/textColorHint"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/textColorLabel"
        android:textColor="@color/colorBackGround"
        android:textStyle="bold"
        android:fontFamily="@font/fontdiner_swanky"
        android:text="@string/registration" />

    <TextView
        android:id="@+id/authorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="120dp"
        android:fontFamily="@font/fontdiner_swanky"
        android:text="@string/authorization"
        android:textColor="@color/textColorLabel"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>