<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    android:orientation="vertical"
    tools:context=".NewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="40dp"
        android:fontFamily="@font/fontdiner_swanky"
        android:text="@string/authorization"
        android:textColor="#FFEB3B"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_login_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFEB3B"
        android:ems="10"
        android:fontFamily="@font/almendra_sc"
        android:hint="@string/enter_your_login"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/textColorHint"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/user_password_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFEB3B"
        android:ems="10"
        android:fontFamily="@font/almendra_sc"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/textColorHint"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_reg_auth"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FFEB3B"
        android:fontFamily="@font/fontdiner_swanky"
        android:text="@string/enter"
        android:textColor="@color/colorBackGround"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="120dp"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>